server/.happypack/s--1864330404
SyntaxError: C:/Users/Dmitriy/WebstormProjects/FirstProject/client/components/Map.js: Unexpected token (32:55)

[0m [90m 30 | [39m        [36mfor[39m(let i [33m=[39m [35m0[39m[33m;[39m i [33m<[39m [36mthis[39m[33m.[39mstate[33m.[39mcountColumn[33m;[39m i[33m++[39m){
 [90m 31 | [39m            [33m<[39m[33mdiv[39m className[33m=[39m[32m"mapColumn"[39m[33m>[39m
[31m[1m>[22m[39m[90m 32 | [39m                [36mfor[39m(let j [33m=[39m [35m0[39m[33m;[39m j [33m<[39m [36mthis[39m[33m.[39mstate[33m.[39mcountRows[33m;[39m j[33m++[39m){
 [90m    | [39m                                                       [31m[1m^[22m[39m
 [90m 33 | [39m                      
 [90m 34 | [39m            }
 [90m 35 | [39m            [33m<[39m[33m/[39m[33mdiv[39m[33m>[39m[0m

BabelLoaderError: SyntaxError: C:/Users/Dmitriy/WebstormProjects/FirstProject/client/components/Map.js: Unexpected token (32:55)

[0m [90m 30 | [39m        [36mfor[39m(let i [33m=[39m [35m0[39m[33m;[39m i [33m<[39m [36mthis[39m[33m.[39mstate[33m.[39mcountColumn[33m;[39m i[33m++[39m){
 [90m 31 | [39m            [33m<[39m[33mdiv[39m className[33m=[39m[32m"mapColumn"[39m[33m>[39m
[31m[1m>[22m[39m[90m 32 | [39m                [36mfor[39m(let j [33m=[39m [35m0[39m[33m;[39m j [33m<[39m [36mthis[39m[33m.[39mstate[33m.[39mcountRows[33m;[39m j[33m++[39m){
 [90m    | [39m                                                       [31m[1m^[22m[39m
 [90m 33 | [39m                      
 [90m 34 | [39m            }
 [90m 35 | [39m            [33m<[39m[33m/[39m[33mdiv[39m[33m>[39m[0m

    at transpile (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\babel-loader\lib\index.js:63:13)
    at Object.module.exports (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\babel-loader\lib\index.js:163:20)
    at applySyncOrAsync (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:341:21)
    at apply (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:268:5)
    at C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:131:7
    at applyPitchLoader (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:184:14)
    at applyPitchLoader (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:192:14)
    at applyPitchLoader (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:192:14)
    at applyPitchLoaders (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:222:4)
    at applyLoaders (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:116:3)